--- a/forum/templates/forum/base.html
+++ b/forum/templates/forum/base.html
@@ -1,15 +1,32 @@
 {% extends 'base.html'%}
 {% load staticfiles %}
-{% block subtitle %}<a href="{% url 'forum:index' %}" class="navbar-link">Forum</a>{%  endblock %}
-{% block menu %}
+{% block head %}
+    <link rel="stylesheet" type="text/css" href='{% static 'forum/style.css' %}' />
+{% endblock %}
+{% block menuleft %}<li><a href="{% url 'forum:index' %}" class="navbar-link">Forum</a></li>{%  endblock %}
+{% block menuright %}
     {% block menu_per_page %}{% endblock %}
+    <li>
+        <form class="navbar-form" role="search" method="post" id="search-form" name="search-form" action="{% url 'forum:search' none %}">
+            <div class="input-group">
+                {% csrf_token %}
+                <input type="text" class="form-control" placeholder="Search..." id="query" name="query" value="">
+                <div class="input-group-btn">
+                    <button type="submit" class="btn btn-default search-btn" title="search"><span class="glyphicon glyphicon-search"></span></button>
+                    <a href="{% url 'forum:new_search' %}" type="button" class="btn btn-default search-btn" methods="get" title="advanced search"><span class="glyphicon glyphicon-plus search"></span></a>
+                </div>
+            </div>
+        </form>
+    </li>
     {% if request.user.is_authenticated and request.user.is_supermod or request.user.modded_boards %}
         <li>
             <div class="dropdown">
                 <span class=" dropdown-toggle cog-button" role="button" data-toggle="dropdown"><span class="glyphicon glyphicon-cog"></span></span>
                 <ul class="dropdown-menu">
                     {% if request.user.modded_boards or request.user.is_supermod%}
-                        {% block mod_menu %}{% endblock %}
+                        {% for board in request.user.modded_boards %}
+                            <li><a href="{% url 'forum:board' board.code none %}">{{ board.name }}</a></li>
+                        {% endfor %}
                         {% if request.user.is_supermod %}
                             <li><a href="{% url 'forum:create_board' %}">Create board</a></li>
                             <li><a href="{% url 'forum:moderators' %}">Manage moderators</a></li>
@@ -25,7 +42,5 @@
         </li>
     {% endif %}
 {% endblock %}
-{% block head %}
-    <link rel="stylesheet" type="text/css" href='{% static 'forum/style.css' %}' />
-{% endblock %}
+
 
