--- a/forum/templates/forum/thread.html
+++ b/forum/templates/forum/thread.html
@@ -120,13 +120,41 @@
 
     {% if posts.number == posts.paginator.num_pages and not thread.is_closed %}
         <section id="bottom">
-            <form method="post">
-                {% csrf_token %}
-            <table id="message">
-                {{ form|crispy }}
-            </table>
-                <input type="submit" value="Post" class="btn btn-default" />
-            </form>
+
+
+
+            <div class="row">
+                <div class="col-sm-2">
+                    <div class="row">
+                        <div class="col-xs-6 col-sm-12">
+                            <a href="{% url 'forum:profile' request.user.username %}"><img src="{{ request.user.avatar.url }}" class="img-thumbnail"></a><br/>
+                        </div>
+                        <div class="col-xs-6 col-sm-12 text-right-xs" id="user-details">
+                            <a href='{% url 'forum:profile' request.user.username %}' title="User"><span class="glyphicon glyphicon-user"></span> {{ request.user }}</a><br/>
+                            <a title="Reputation"><span class="glyphicon glyphicon-certificate"></span> {{ request.user.rep }}</a><br/>
+                            <a title="Posts"><span class="glyphicon glyphicon-comment"></span> {{ request.user.posts }}</a><br/>
+                            {% if request.user.is_superuser %}
+                                <span class="glyphicon glyphicon-king"></span> admin<br/>
+                            {% elif request.user.is_supermod %}
+                                <span class="glyphicon glyphicon-queen"></span> supermod<br/>
+                            {% elif thread.board in request.user.modded_boards %}
+                                <span class="glyphicon glyphicon-knight"></span> moderator<br/>
+                            {% else %}
+                                <span class="glyphicon glyphicon-pawn"></span> user<br/>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-10">
+                    <form method="post">
+                        {% csrf_token %}
+                        <table id="message">
+                            {{ form|crispy }}
+                        </table>
+                        <input type="submit" value="Post" class="btn btn-default" />
+                    </form>
+                </div>
+            </div>
         </section>
     {% endif %}
 
