added custom filter for profile picture, fixed urls profile bug

--- a/forum/templates/forum/moderators.html
+++ b/forum/templates/forum/moderators.html
@@ -1,4 +1,5 @@
 {% extends 'forum/base.html' %}
+{% load forum_extra %}
 {%  block titlesection %}- Forum - Moderators{%  endblock %}
 {% block body %}
     {% for board, board_moderators in moderators.items %}
@@ -17,7 +18,7 @@
             {% for moderation in board_moderators %}
                 <div class="mod-list-item">
                     <a href="{% url 'forum:remove_mod' moderation.user.pk board.code %}"><span class="glyphicon glyphicon-remove glip-action" onmouseover="" title="remove"></span></a>
-                    <a href="{% url 'forum:profile' moderation.user.username %}"><img src="{{ moderation.user.avatar.url }}" class="img-circle" width="30" height="30"></a>
+                    <a href="{% url 'forum:profile' moderation.user.username %}"><img src="{{ moderation.user.avatar.url|file_exists }}" class="img-circle" width="30" height="30"></a>
                     <a href="{% url 'forum:profile' moderation.user.username %} " class="lead">{{ moderation.user.username }}</a>
                 </div>
             {% endfor %}
