--- a/forum/templates/forum/profile.html
+++ b/forum/templates/forum/profile.html
@@ -1,12 +1,13 @@
 {% extends 'forum/base.html' %}
 {% load staticfiles %}
+{% load forum_extra %}
 {% block titlesection %}- Forum - user {{ user.username }}{%  endblock %}
 {% block body %}
     <div class="row">
         <div class="col-sm-4">
             <div class="row">
                     <div class="col-xs-6 col-sm-12">
-                         <img src="{{ user.avatar.url }}" alt="user avatar" class="img-responsive img-profile" >
+                         <img src="{{ user.avatar.url|file_exists }}" alt="user avatar" class="img-responsive img-profile" >
                     </div>
                     <div class="col-xs-6 col-sm-12 text-right-xs" id="user-details">
                         {{ user.first_name }} {{ user.last_name }}<br/>
