--- a/forum/templates/forum/profile_edit.html
+++ b/forum/templates/forum/profile_edit.html
@@ -1,5 +1,6 @@
 {%  extends 'forum/base.html' %}
 {%  load staticfiles %}
+{% load forum_extra %}
 {% load crispy_forms_tags %}
 {%  block titlesection %}- Forum - edit {{ user.username }} profile{%  endblock %}
 {% block menu %}{% endblock %}
@@ -15,7 +16,7 @@
                     <div class="col-xs-6 col-sm-12">
                         	<div class="profile-pic">
                                 <a title="edit" data-toggle="modal" data-target="#change-image">
-                                    <img src="{{ user.avatar.url }}" alt="user avatar" class="img-responsive img-profile">
+                                    <img src="{{ user.avatar.url|file_exists }}" alt="user avatar" class="img-responsive img-profile">
                                     <div class="edit"><span class="glyphicon glyphicon-edit glip-action"></span></div>
                                 </a>
 	                        </div>
