--- a/forum/templates/forum/supermods.html
+++ b/forum/templates/forum/supermods.html
@@ -1,10 +1,11 @@
 {% extends 'forum/base.html' %}
+{% load forum_extra %}
 {%  block titlesection %}- Forum - Supermods{%  endblock %}
 {% block body %}
     {% for user in supermods %}
         <div>
             <a href="{% url 'forum:supermod_toggle' user.pk %}"><span class="glyphicon glyphicon-remove glip-action" onmouseover="" title="remove"></span></a>
-            <a href="{% url 'forum:profile' user.username %}"><img src="{{ user.avatar.url }}" class="img-circle" width="30" height="30"></a>
+            <a href="{% url 'forum:profile' user.username %}"><img src="{{ user.avatar.url|file_exists }}" class="img-circle" width="30" height="30"></a>
             <a href="{% url 'forum:profile' user.username %} " class="lead">{{ user.username }}</a>
         </div>
     {% endfor %}
