--- a/forum/templates/forum/thread.html
+++ b/forum/templates/forum/thread.html
@@ -123,30 +123,42 @@
                             </div>
                         </div>
                     </div>
-                    {% for reply in post.comment_set.all %}
-                        <div class="row" id="reply{{ reply.pk }}">
-                            <div class="col-sm-2">
-                                <div class="row">
-                                    <div class="col-xs-6 col-sm-12">
-                                        <a href="{% url 'forum:profile' reply.author.username %}"><img src="{{ reply.author.avatar.url|file_exists }}" class="img-thumbnail"></a><br/>
-                                    </div>
-                                    <div class="col-xs-6 col-sm-12 text-right-xs" id="user-details">
-                                        <a href="{% url 'forum:profile' reply.author.username %}" title="User"><span class="glyphicon glyphicon-user"></span> {{ reply.author }}</a><br/>
+                    {% for reply in post.reply.all %}
+                        <div class="well">
+                            <div class="row" id="reply{{ reply.pk }}">
+                                <div class="col-sm-2">
+                                    <div class="row">
+                                        <div class="col-xs-6 col-sm-12">
+                                            <a href="{% url 'forum:profile' reply.author.username %}"><img src="{{ reply.author.avatar.url|file_exists }}" class="img-thumbnail"></a><br/>
+                                        </div>
+                                        <div class="col-xs-6 col-sm-12 text-right-xs" id="user-details">
+                                            <a href="{% url 'forum:profile' reply.author.username %}" title="User"><span class="glyphicon glyphicon-user"></span> {{ reply.author }}</a><br/>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-sm-10">
-                                <div class="panel panel-default">
-                                    <div class="panel-body">
-                                        <div class="row">
-                                            <div class="col-sm-9">
-                                                <span class="small text-muted"><script> document.write(date("{{ reply.pub_date|date:'d M Y H:i:s' }}"))</script></span><br/>
-                                                <div>{{ reply.message|linebreaksbr }}</div>
-                                            </div>
-                                            <div class="col-sm-3 text-right">
-                                                {% if reply.author.username in request.user.username or thread.board in request.user.modded_boards or request.user.is_supermod %}
-                                                    <a href="{% url 'forum:del_comment' reply.pk %}?next={{ request.get_full_path|urlencode }}" class="btn btn-default" onclick="return confirm('Do you want to delete this comment?')" id="delete">Delete Comment</a>
-                                                {% endif %}
+                                <div class="col-sm-10">
+                                    <div class="panel panel-default">
+                                        <div class="panel-body">
+                                            <div class="row">
+                                                <div class="col-sm-9">
+                                                    <span class="small text-muted"><script> document.write(date("{{ reply.pub_date|date:'d M Y H:i:s' }}"))</script></span><br/>
+                                                    <div>{{ reply.message|linebreaksbr }}</div>
+                                                </div>
+                                                <div class="col-sm-3 text-right">
+                                                    {% if reply.author.username in request.user.username or thread.board in request.user.modded_boards or request.user.is_supermod %}
+                                                        <a href="{% url 'forum:del_comment' reply.pk %}?next={{ request.get_full_path|urlencode }}" class="btn btn-default" onclick="return confirm('Do you want to delete this comment?')" id="delete">Delete Comment</a>
+                                                    {% endif %}<br/>
+                                                    <a href="{% url 'forum:pos_vote' reply.pk 'up' %}?next={{ request.get_full_path|urlencode }}#{{ post.pk }}">
+                                                        <span class="badge" id="pos_badge">
+                                                            {{ reply.pos_votes }}
+                                                        </span>
+                                                    </a>
+                                                    <a href="{% url 'forum:neg_vote' reply.pk 'down' %}?next={{ request.get_full_path|urlencode }}#{{ post.pk }}">
+                                                        <span class="badge" id="neg_badge">
+                                                            {{ reply.neg_votes }}
+                                                        </span>
+                                                    </a>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -154,31 +166,35 @@
                             </div>
                         </div>
                     {% endfor %}
-                    <div class="row collapse comment{{ post.pk }}">
-                        <div class="col-sm-2">
-                            <div class="row">
-                                <div class="col-xs-6 col-sm-12">
-                                    <a href="{% url 'forum:profile' request.user.username %}"><img src="{{ request.user.avatar.url|file_exists }}" class="img-thumbnail"></a><br/>
-                                </div>
-                                <div class="col-xs-6 col-sm-12 text-right-xs" id="user-details">
-                                    <a href="{% url 'forum:profile' request.user.username %}" title="User"><span class="glyphicon glyphicon-user"></span> {{ request.user.username }}</a><br/>
+                    <div class="well collapse comment{{ post.pk }}">
+                        <div class="row">
+                            <div class="col-sm-2">
+                                <div class="row">
+                                    <div class="col-xs-6 col-sm-12">
+                                        <a href="{% url 'forum:profile' request.user.username %}"><img src="{{ request.user.avatar.url|file_exists }}" class="img-thumbnail"></a><br/>
+                                    </div>
+                                    <div class="col-xs-6 col-sm-12 text-right-xs" id="user-details">
+                                        <a href="{% url 'forum:profile' request.user.username %}" title="User"><span class="glyphicon glyphicon-user"></span> {{ request.user.username }}</a><br/>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-sm-10">
-                            <form method="post" action="{% url 'forum:comment' post.pk %}">
-                                <div class="row">
-                                    {% csrf_token %}
-                                    <table>
-                                        {{ comment_form | crispy }}
-                                    </table>
-                                    <input type="submit" value="Submit" class="btn btn-default" />
-                                </div>
-                            </form>
+                            <div class="col-sm-10 reply-form">
+                                <form method="post" action="{% url 'forum:comment' post.pk %}">
+                                    <div class="row">
+                                        {% csrf_token %}
+                                        <table>
+                                            {{ comment_form | crispy }}
+                                        </table>
+                                        <input type="submit" value="Submit" class="btn btn-default" />
+                                    </div>
+                                </form>
+                            </div>
                         </div>
                     </div>
                     <div class="text-right">
+                        {% if not thread.is_closed %}
                         <div class="btn btn-default" data-toggle="collapse" data-target=".comment{{ post.pk }}" aria-expanded="false" aria-controls="first-name">Reply</div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
@@ -187,36 +203,38 @@
 
     {% if posts.number == posts.paginator.num_pages and not thread.is_closed %}
         <section id="bottom">
-            <div class="row">
-                <div class="col-sm-2">
-                    <div class="row">
-                        <div class="col-xs-6 col-sm-12">
-                            <a href="{% url 'forum:profile' request.user.username %}"><img src="{{ request.user.avatar.url|file_exists }}" class="img-thumbnail"></a><br/>
-                        </div>
-                        <div class="col-xs-6 col-sm-12 text-right-xs" id="user-details">
-                            <a href="{% url 'forum:profile' request.user.username %}" title="User"><span class="glyphicon glyphicon-user"></span> {{ request.user }}</a><br/>
-                            <a title="Reputation"><span class="glyphicon glyphicon-certificate"></span> {{ request.user.rep }}</a><br/>
-                            <a title="Posts"><span class="glyphicon glyphicon-comment"></span> {{ request.user.posts }}</a><br/>
-                            {% if request.user.is_superuser %}
-                                <span class="glyphicon glyphicon-king"></span> admin<br/>
-                            {% elif request.user.is_supermod %}
-                                <span class="glyphicon glyphicon-queen"></span> supermod<br/>
-                            {% elif thread.board in request.user.modded_boards %}
-                                <span class="glyphicon glyphicon-knight"></span> moderator<br/>
-                            {% else %}
-                                <span class="glyphicon glyphicon-pawn"></span> user<br/>
-                            {% endif %}
+            <div class="well thread-well">
+                <div class="row">
+                    <div class="col-sm-2">
+                        <div class="row">
+                            <div class="col-xs-6 col-sm-12">
+                                <a href="{% url 'forum:profile' request.user.username %}"><img src="{{ request.user.avatar.url|file_exists }}" class="img-thumbnail"></a><br/>
+                            </div>
+                            <div class="col-xs-6 col-sm-12 text-right-xs" id="user-details">
+                                <a href="{% url 'forum:profile' request.user.username %}" title="User"><span class="glyphicon glyphicon-user"></span> {{ request.user }}</a><br/>
+                                <a title="Reputation"><span class="glyphicon glyphicon-certificate"></span> {{ request.user.rep }}</a><br/>
+                                <a title="Posts"><span class="glyphicon glyphicon-comment"></span> {{ request.user.posts }}</a><br/>
+                                {% if request.user.is_superuser %}
+                                    <span class="glyphicon glyphicon-king"></span> admin<br/>
+                                {% elif request.user.is_supermod %}
+                                    <span class="glyphicon glyphicon-queen"></span> supermod<br/>
+                                {% elif thread.board in request.user.modded_boards %}
+                                    <span class="glyphicon glyphicon-knight"></span> moderator<br/>
+                                {% else %}
+                                    <span class="glyphicon glyphicon-pawn"></span> user<br/>
+                                {% endif %}
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-10">
-                    <form method="post">
-                        {% csrf_token %}
-                        <table id="message">
-                            {{ form|crispy }}
-                        </table>
-                        <input type="submit" value="Post" class="btn btn-default" />
-                    </form>
+                    <div class="col-sm-10">
+                        <form method="post">
+                            {% csrf_token %}
+                            <table id="message">
+                                {{ form|crispy }}
+                            </table>
+                            <input type="submit" value="Post" class="btn btn-default" />
+                        </form>
+                    </div>
                 </div>
             </div>
         </section>
