--- a/forum/templates/forum/search_threads.html
+++ b/forum/templates/forum/search_threads.html
@@ -17,7 +17,7 @@
         <div class="well well-sm boards lead">
             <div class="row">
                 <div class="col-xs-10">
-                    <span class="glyphicon glyphicon-search"></span> search: {{ search }}
+                    <span class="glyphicon glyphicon-search"></span> {{ search }}
                 </div>
                 <div class="col-xs-2"></div>
             </div>
