--- a/forum/templates/forum/base.html
+++ b/forum/templates/forum/base.html
@@ -10,7 +10,7 @@
         <form class="navbar-form" role="search" method="post" id="search-form" name="search-form" action="{% url 'forum:search' none %}">
             <div class="input-group">
                 {% csrf_token %}
-                <input type="text" class="form-control" placeholder="Search..." id="query" name="query" value="">
+                <input type="text" class="form-control" placeholder="Search..." id="query" name="query_title" value="">
                 <div class="input-group-btn">
                     <button type="submit" class="btn btn-default search-btn" title="search"><span class="glyphicon glyphicon-search"></span></button>
                     <a href="{% url 'forum:new_search' %}" type="button" class="btn btn-default search-btn" methods="get" title="advanced search"><span class="glyphicon glyphicon-plus search"></span></a>
